package Model;

public class Adresse {
}
